--- a/cv.html
+++ b/cv.html
@@ -12,21 +12,37 @@
 </head>
 
 <body>
+    <!--NAV BAR-->
+        <div id="nav-bar">
+          <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="cv.html">Info</a>
+            <a href="shop.html">Shop</a>
+            <a href="stock.html">Stocks</a>
+          </div>
+        </div>
+    
+
 
     <div class="container">
-        <h2>Andreas Hodneland</h2>
+        <h1>A.H.</h1>
     </div>
 
     <div class="container">
-        <p>Denne siden skal jeg bruke som CV.</p>
-        <p>Det vil komme linker til prosjekter jeg har holdt på med.</p>
+        <h2>Ting som skal implementeres</h2>
+
+        <ul>
+            <li>Kanskje legge inn en CV her, eventuelt lage en easy-going presentasjon av hvem jeg er og hva jeg holder på å lærer meg</li>
+            
+        </ul>
     </div>
 
-
+<!--
     <div class="container">
         <button class="back-button" onclick="document.location='index.html'">
             Home
     </div>
+    -->
     </button>
 
 
