--- a/shop.html
+++ b/shop.html
@@ -13,20 +13,38 @@
 
 <body>
 
+<!--NAV BAR-->
+
+        <div id="nav-bar">
+          <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="cv.html">Info</a>
+            <a href="shop.html">Shop</a>
+            <a href="stock.html">Stocks</a>
+          </div>
+        </div>
+    
+
     <div class="container">
-        <h2>Shop</h2>
+        <h1>Shop</h1>
     </div>
 
     <div class="container">
-        <p>Her vil det komme noe alla en butikkaktig løsning med links til div interesser jeg har. Brettspill,
-            rollespill, etc</p>
+        <h2>Ting som skal implementeres</h2>
+
+        <ul>
+            <li>Her vil det komme noe alla en butikkaktig løsning med links til div interesser jeg har. Brettspill,
+                rollespill, etc</li>
+        </ul>
+       
     </div>
 
-
+<!--
     <div class="container">
         <button class="back-button" onclick="document.location='index.html'">
             Home
     </div>
+    -->
     </button>
 
 
