--- a/stock.html
+++ b/stock.html
@@ -12,19 +12,35 @@
 </head>
 
 <body>
+    <!--NAV BAR-->
+        <div id="nav-bar">
+          <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="cv.html">Info</a>
+            <a href="shop.html">Shop</a>
+            <a href="stock.html">Stocks</a>
+          </div>
+        </div>
+    
 
     <div class="container">
-        <h2>Stocks</h2>
+        <h1>Stocks</h1>
     </div>
 
     <div class="container">
-        <p>Her skal jeg se om jeg får linket til noen aksjer ++</p>
+        <h2>Ting som skal implementeres</h2>
+        <ul>
+            <li>Link til aksjekurser(stock quotes), om mulig</li>
+            <li>Forskjellige nyttige kalkulatorer: utregning av avkastning, etc</li>
+            <li>Vise porteføljeutvikling</li>
+        </ul>
     </div>
-
+<!--
     <div class="container">
         <button class="back-button" onclick="document.location='index.html'">
             Home
     </div>
+-->
     </button>
 
 
