--- a/cv.html
+++ b/cv.html
@@ -13,14 +13,21 @@
 
 <body>
     <!--NAV BAR-->
-        <div id="nav-bar">
-          <div class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <a href="cv.html">Info</a>
-            <a href="shop.html">Shop</a>
-            <a href="stock.html">Stocks</a>
+    <div id="nav-bar">
+        <div class="topnav">
+          <a class="active" href="index.html">Home</a>
+          <a href="cv.html">Info</a>
+          <a href="shop.html">Shop</a>
+          <a href="stock.html">Stocks</a>
+          <div class="dropdown">
+            <button class="dropbtn">Games</button>
+            <div class="dropdown-content">
+              <a href="#">Number Game</a>
+              <a href="#">... Under Construction ...</a>
+            </div>
           </div>
         </div>
+      </div>
     
 
 
@@ -45,8 +52,11 @@
     -->
     </button>
 
-
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
 </body>
 
