--- a/shop.html
+++ b/shop.html
@@ -15,14 +15,21 @@
 
 <!--NAV BAR-->
 
-        <div id="nav-bar">
-          <div class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <a href="cv.html">Info</a>
-            <a href="shop.html">Shop</a>
-            <a href="stock.html">Stocks</a>
-          </div>
+<div id="nav-bar">
+    <div class="topnav">
+      <a class="active" href="index.html">Home</a>
+      <a href="cv.html">Info</a>
+      <a href="shop.html">Shop</a>
+      <a href="stock.html">Stocks</a>
+      <div class="dropdown">
+        <button class="dropbtn">Games</button>
+        <div class="dropdown-content">
+          <a href="#">Number Game</a>
+          <a href="#">... Under Construction ...</a>
         </div>
+      </div>
+    </div>
+  </div>
     
 
     <div class="container">
@@ -47,7 +54,11 @@
     -->
     </button>
 
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
 </body>
 
